--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,13 @@
 /.bundle
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
+*.sqlite3
+*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
-/log/*
-!/log/.keep
-/tmp
+*.log
+tmp
 
 # Others
-public/assets
+web_container/public/assets
 .idea
