--- a/components/app_component/Gemfile
+++ b/components/app_component/Gemfile
@@ -2,4 +2,8 @@ source 'https://rubygems.org'
 
 gemspec
 
+path '../' do
+  gem 'predictor'
+end
+
 gem 'trueskill', git: 'https://github.com/benjaminleesmith/trueskill', ref: 'e404f45af5b3fb86982881ce064a9c764cc6a901'
