--- a/web_container/Gemfile
+++ b/web_container/Gemfile
@@ -1,13 +1,15 @@
 source 'https://rubygems.org'
 ruby '2.3.0'
 
-gem 'app_component', path: '../components/app_component'
+path '../components' do
+  gem 'app_component'
+  gem 'games_admin'
+end
 
 # Ensuring correct version of transitive dependency
 gem 'trueskill', git: 'https://github.com/benjaminleesmith/trueskill', ref: 'e404f45af5b3fb86982881ce064a9c764cc6a901'
 
 gem 'rails', '4.2.6'
-gem 'sqlite3'
 gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.1.0'
@@ -23,6 +25,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # gem 'capistrano-rails', group: :development
 
 group :development, :test do
+  gem 'sqlite3'
   gem 'byebug'
   gem 'rspec-rails', '~> 3.4.2'
   gem 'capybara', '~> 2.6.2'
