--- a/components/predictor_ui/Gemfile
+++ b/components/predictor_ui/Gemfile
@@ -1,15 +1,12 @@
 source 'https://rubygems.org'
 
-# Declare your gem's dependencies in predictor_ui.gemspec.
-# Bundler will treat runtime dependencies like base dependencies, and
-# development dependencies will be added by default to the :development group.
 gemspec
 
-# Declare any dependencies that are still in development here instead of in
-# your gemspec. These might include edge Rails or gems from your path or
-# Git. Remember to move these dependencies to your gemspec before releasing
-# your gem to rubygems.org.
+gem 'trueskill',
+    git: 'https://github.com/benjaminleesmith/trueskill',
+    ref: 'e404f45af5b3fb86982881ce064a9c764cc6a901'
 
-# To use a debugger
-# gem 'byebug', group: [:development, :test]
-
+path '..' do
+  gem 'app_component'
+  gem 'predictor'
+end
