fixing all specs according to welcome_ui

--- a/web_container/Gemfile
+++ b/web_container/Gemfile
@@ -6,6 +6,7 @@ path '../components' do
   gem 'games_admin'
   gem 'teams_admin'
   gem 'predictor_ui'
+  gem 'welcome_ui'
 end
 
 # Ensuring correct version of transitive dependency
